<resources>
    <string name="app_name">Project</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_navigation">navigation</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="FoodSuggestionActivity">FoodSuggestionActivity</string>
    <string name="StatisticsActivity">StatisticsActivity</string>
    <string name="GymOptionsActivity">GymOptionsActivity</string>
    <string name="title_activity_walking_route">WalkingRoute</string>
    <string name="NearbyPlacesActivity">NearbyPlacesActivity</string>
    <string name="server_client_id">570983106334-b6mcj5c7mdnrk1i4h7sgb32slp1e3u0g.apps.googleusercontent.com</string>
    <string name="facebook_app_id">223604414667150</string>


    <string name="textView1">textView1</string>
    <string name="textView2">textView2</string>
    <string name="textView3">textView3</string>
    <string name="textView4">textView4</string>
    <string name="textView5">textView5</string>
    <string name="textView6">textView6</string>
    <string name="textView7">textView7</string>
    <string name="textView8">textView8</string>
    <string name="title_activity_run_history">RunHistoryActivity</string>
    <string name="title_activity_detail">Run History detail</string>
    <string name="title_activity_video">VideoActivity</string>
    <string name="title_activity_sport">SportActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>
    <string name="title_activity_table_history">TableHistoryActivity</string>
    <string name="title_activity_nearby_places">NearbyPlacesActivity</string>
    <string name="title_activity_edit_sport">EditSport</string>


</resources>
